--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-.main_one_start ul{
-
+.rasel{
+    width:50%;
+    height: 300px;
+    background-color:aqua;
+    overflow: hidden;
 }
-.main_one_start ul li{
-    display:inline-block;
-    padding: 10px;
+.mid-rasel{
+    width: 10%;
+    height: 60px;
+    background-color:navy;
 }
 
 
