--- a/style.css
+++ b/style.css
@@ -1,18 +1,13 @@
-.rasel{
-    width:50%;
-    height: 300px;
-    background-color:aqua;
-    overflow: hidden;
+.title{
+background-color: bisque;
+width: 100%;
+height: 300px;
 }
-.mid-rasel{
-    width: 10%;
-    height: 60px;
-    background-color:navy;
+img{
+    width:100%;
+    height: 400px;
 }
-
-
-/* 
-@media (min-width:992px) and (max-width:1199px){
+/* @media (min-width:992px) and (max-width:1199px){
     .main_one_start ul{
 
     }
